packages/lustre-v6.6.103.3/test/should_fail/struct.lus
type complex = struct {
	re : real;
	im : real
}; 
node plus_im (a : real; b : complex) returns (c : complex);
let
  c = complex { im = a+b.im };
tel
